# inno

./: Cargo.toml  README.md
.github/: renovate.json
.github/workflows/: ci.yml  release.yml
cli/src/: components.rs  constraint.rs  delete.rs  directories.rs  emoji.rs  file_locations.rs  files.rs  icons.rs  ini.rs  languages.rs  main.rs  messages.rs  page.rs  permissions.rs  registries.rs  summary.rs  tabs.rs  tasks.rs  types.rs  view.rs
core/: Cargo.toml
core/src/: compression.rs  error.rs  extract.rs  lib.rs  lzma_stream_header.rs  string.rs  wizard.rs
core/src/encryption/: encryption_use.rs  kdf_salt.rs  mod.rs  nonce.rs  reader.rs
core/src/entry/: component.rs  condition.rs  directory.rs  icon.rs  ini.rs  is_sig_key.rs  language.rs  message.rs  mod.rs  permission.rs  task.rs  type.rs
core/src/entry/checksum/: error.rs  md5.rs  mod.rs  sha1.rs  sha256.rs
core/src/entry/delete/: mod.rs  target_type.rs
core/src/entry/file/: flags.rs  mod.rs  type.rs
core/src/entry/file/verification/: mod.rs  type.rs
core/src/entry/language/: dialog_font.rs  mod.rs
core/src/entry/location/: checksum.rs  compression_filter.rs  file.rs  flags.rs  instruction.rs  mod.rs  sign.rs
core/src/entry/registry/: flags.rs  mod.rs  root.rs  type.rs
core/src/entry/run/: flags.rs  mod.rs  wait_condition.rs
core/src/header/: architecture.rs  auto_bool.rs  color.rs  compression.rs  entry_counts.rs  flag_reader.rs  flags.rs  image_alpha_format.rs  inno_style.rs  install_verbosity.rs  language_detection.rs  log_mode.rs  mod.rs  privilege_level.rs  privileges_required_overrides.rs  wizard_resize_percent.rs  wizard_size_percent.rs  yes_no.rs
core/src/header/wizard/: color.rs  image_alpha_format.rs  light_control_styling.rs  mod.rs  wizard_size_percent.rs
core/src/iterator/: extract_entry.rs  files.rs  filtered_files.rs  mod.rs
core/src/loader/: checksum.rs  mod.rs  offset.rs  signature.rs
core/src/pe/optional_header/: data_directory.rs  mod.rs
core/src/pe/resource/: directory.rs  mod.rs
core/src/pe/resource/image/: directory_entry.rs
core/src/read/: block.rs  crc32.rs  data_chunk.rs  decoder.rs  ext.rs  filter.rs  mod.rs  stream.rs
core/src/read/chunk/: encryption.rs  mod.rs
core/src/version/: mod.rs  variant.rs  windows_version.rs
core/tests/: inno_versions.rs
src/: compression.rs  encoding.rs  error.rs  lib.rs  lzma_stream_header.rs  string.rs  version.rs  windows_version.rs  wizard.rs
src/entry/: component.rs  condition.rs  directory.rs  icon.rs  ini.rs  language.rs  message.rs  mod.rs  permission.rs  registry.rs  registry_root.rs  task.rs  type.rs
src/entry/delete/: mod.rs  target_type.rs
src/entry/file/: copy_mode.rs  flags.rs  mod.rs  type.rs
src/entry/registry/: mod.rs
src/entry/run/: mod.rs  wait_condition.rs
src/header/: auto_bool.rs  color.rs  flag_reader.rs  flags.rs  inno_style.rs  log_mode.rs  mod.rs  privilege_level.rs
src/loader/: checksum.rs  mod.rs  offset.rs  signature.rs  version.rs
src/pe/: signature.rs
src/pe/resource/: section_reader.rs
src/pe/section_table/: mod.rs
src/read/: block.rs  chunk.rs  decoder.rs  ext.rs  mod.rs
src/version/: mod.rs  variant.rs
