[package]
name = "innex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
path = "cli/src/main.rs"
name = "innex"

[workspace]
members = ["core"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/russellbanks/inno"
license = "MIT OR Apache-2.0"

[dependencies]
anstream = "0.6"
clap = { version = "4", features = ["derive"] }
inno = { version = "0.2", path = "core" }

[features]
static-lzma = ["inno/static-lzma"]

[profile.release]
codegen-units = 1
lto = true
strip = true
