[package]
name = "innex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
path = "cli/src/main.rs"
name = "innex"

[workspace]
members = ["core"]

[workspace.package]
version = "0.3.1"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/russellbanks/inno"
license = "MIT OR Apache-2.0"

[dependencies]
anstream = "0.6.21"
anyhow = "1.0.100"
bitflags = "2.10.0"
camino = "1.1.12"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
inno = { version = "0.3.0", path = "core", features = ["chrono"] }
itertools = { version = "0.14.0", default-features = false }
num-traits = "0.2.19"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }

[features]
lzma-static = ["inno/lzma-static"]

[profile.release]
codegen-units = 1
lto = true
strip = true
